# qfieldsync

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .qgis-plugin-ci  .travis.yml  README.html  README.md  README.txt  __init__.py  config.py  data_source_utils.py  export_offline.py  file_utils.py  metadata.txt  plugin_upload.py  push_dialog.py  push_dialog_base.ui  pyproject.toml  qfield_sync.py  qgis_utils.py  qt_utils.py  remote_options.py  requirements.txt  resources.qrc  resources_rc.py  settings.ui  settings_dialog.py  tox.ini  update_translations.sh
.docker/: Dockerfile  docker-compose.travis.yml  run-docker-tests.sh  xvfb-pytest
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  config.yml
.github/workflows/: continuous_integration.yml  release_drafter.yml  stale.yml
.tx/: config
dialogs/: push_dialog.py  remote_options_dialog.py  settings_dialog.py
help/source/: conf.py  index.rst
i18n/: QFieldSync_de.ts
qfieldsync/: Makefile  __init__.py  config.py  metadata.txt  qfield_sync.py  resources.qrc  resources_rc.py  resources_rc4.py  resources_rc5.py
qfieldsync/.tx/: config
qfieldsync/core/: __init__.py  cloud_api.py  cloud_converter.py  cloud_project.py  cloud_transferrer.py  configuration_checkup.py  errors.py  layer.py  message_bus.py  offline_converter.py  preferences.py  project.py
qfieldsync/dialogs/: config_dialog.py  package_dialog.py  preferences_dialog.py  project_configuration_dialog.py  pull_dialog.py  push_dialog.py  remote_options_dialog.py  settings_dialog.py  synchronize_dialog.py
qfieldsync/gui/: __init__.py  attachment_naming_widget.py  browser_tree.py  checker_feedback_table.py  cloud_browser_tree.py  cloud_converter_dialog.py  cloud_create_project_widget.py  cloud_login_dialog.py  cloud_projects_dialog.py  cloud_projects_model.py  cloud_servers_history.py  cloud_transfer_dialog.py  directories_configuration_widget.py  dirs_to_copy_widget.py  image_stamping_configuration_widget.py  layers_config_widget.py  map_layer_config_widget.py  map_overlay_configuration_widget.py  mapthemes_config_widget.py  navigation_configuration_widget.py  package_dialog.py  photo_naming_widget.py  preferences_dialog.py  preferences_widget.py  project_configuration_dialog.py  project_configuration_widget.py  qfield_cloud_dialog.py  qfield_cloud_transfer_dialog.py  qfieldcloud_pull_dialog.py  relationship_configuration_widget.py  resource_naming_widget.py  resources_rc.py  storage_widget.py  synchronize_dialog.py  utils.py
qfieldsync/i18n/: QFieldSync_de.qm  QFieldSync_de.ts  QFieldSync_en.ts  QFieldSync_es.ts  QFieldSync_fi.qm  QFieldSync_fi.ts  QFieldSync_fr.qm  QFieldSync_fr.ts  QFieldSync_gl.qm  QFieldSync_gl.ts  QFieldSync_hu.qm  QFieldSync_hu.ts  QFieldSync_it.ts  QFieldSync_lt.ts  QFieldSync_pt.ts  QFieldSync_ro.qm  QFieldSync_ro.ts  QFieldSync_uk.ts
qfieldsync/libqfieldsync/: __init__.py  layer.py  offline_converter.py
qfieldsync/processing/: basemap.py  provider.py
qfieldsync/scripts/: compile-strings.sh  update-strings.sh
qfieldsync/test/: test_qfield_sync_dialog.py  test_resources.py  test_translations.py  utilities.py
qfieldsync/tests/: __init__.py  test_cloud_login_dialog.py  test_export.py  (+5 more)
scripts/: plugin_upload.py  prepare-commit.sh
test/: test_qfield_sync_dialog.py  test_resources.py
ui/: push_dialog_base.ui  settings.ui
utils/: export_offline_utils.py  qgis_utils.py
(+61 files in other folders)
